fix(section-gallery): I made a smooth gap for different screen resolutions

--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -44,6 +44,7 @@
   position: relative;
   top: 64px;
   height: 141%;
+  left: 8px;
 }
 
 @mixin offset-gallery-grid-three-1024px {
